# lineup-poc

./: .gitignore  README.md  pyproject.toml
src/lineup/: __init__.py  cli.py  scan.py
src/lineup/core/: config.py  interfaces.py  models.py
src/lineup/executor/: browser.py
src/lineup/explorer/: web.py
src/lineup/generator/: claude.py  gemini.py  llm.py
src/lineup/learning/: store.py
src/lineup/reporter/: html.py
tests/: test_config.py  test_learning_store.py  test_models.py
